# moveit_differential_ik_plugin

./: CMakeLists.txt  README.md  moveit_differential_ik_plugin.xml  package.xml
include/moveit_differential_ik_plugin/: moveit_kinematics.hpp
src/: moveit_kinematics.cpp
